 * Added country field to member profiles.
 * Removed dependency of textile markup, now using pure html.
 * Added option to send e-mails to users which have selected an option in a group.
 * Simplified setting files.
 * Moved some dependencies into a contrib folder for easier installation.
 * Added outgoing mail query in order to better support mass e-mails.

2.2.0
 * Added pyton library to sso api.
 * Added roundup sso integration.
 * Added group information to sso api and php library.
 * Initial release of selvbetjening notify with support for pushing user groups to concrete5

2.1.5

 * Fixed error in validation of eventregistrations when reselecting frozen options.
 * Improved payment and invoice revision admin interface.

2.1.4

 * Fixed logical error in calculating invoice state.

2.1.3

 * Fixed error when displaying statistics for attendee selections.

2.1.2

 * Fixed error in internal naming of function for Options.

2.1.1

 * Improved performance for the option administration page.

2.1.0

 * Added invoice page to eventregistration.
 * Various bugfixes and improvements to services plugins.
 * Fixed some missing language files for eventregistration.

2.0.0

 * Added sorting users by age.
 * Removed booking module.
 * Restructured modules into clients, data and viewhelpers.
 * Added option to display change and registration confirmations for events.
 * Added support for invoices.
 * Added suboptions.
 * Improved eventadmin
   - View pending payments
   - Change selections
   - Pay invoices
   - Add notes to events
 * Option validation more flexible by validating optiongroups separatly
 * Added missing language file
 * More flexible rendering of forms
 * Added internal API structure (initially implementing functions for single sign-on systems)
 * Added various SSO plugins for services
   - Concrete 5
   - phpbb3

1.1.0

 * Improved options.
 * Added max attendees to events.

1.0.0

 * Renamed registration to quickregistration.